--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta property="og:title" content="Asif Aslam___ Irfan Malik" />
         <meta property="og:description" content="Irfan Malik Is The FOUNDER &amp; AT XEVEN SOLUTION IN LOHORE" />
+        <meta property="og:image" content="./irfan malik.jpg" />
     </head>
     <body>
         <h1>Asif Aslam___Irfan Malik</h1>
